tests/ui/higher-ranked/trait-bounds/hrtb-exists-forall-trait-covariant.stderr
error: higher-ranked subtype error
  --> $DIR/hrtb-exists-forall-trait-covariant.rs:33:5
   |
LL |     foo::<()>();
   |     ^^^^^^^^^^^

error: aborting due to 1 previous error

